<resources>
    <string name="app_name">뱅크레시피</string>
    <string name="title_home">홈</string>
    <string name="title_recipe">레시피</string>
    <string name="title_community">거래</string>
    <string name="title_chat">채팅</string>
    <string name="title_myPage">마이페이지</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>