<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_house"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_recipe"
        android:icon="@drawable/ic_recipe"
        android:title="@string/title_recipe" />

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_community"
        android:title="@string/title_community" />
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/title_chat" />
    <item
        android:id="@+id/navigation_myPage"
        android:icon="@drawable/ic_my_page"
        android:title="@string/title_myPage" />

</menu>