<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.solid.bankrecipe.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_recipe"
        android:name="com.solid.bankrecipe.ui.recipe.RecipeFragment"
        android:label="@string/title_recipe"
        tools:layout="@layout/fragment_recipe" />

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.solid.bankrecipe.ui.community.CommunityFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_community" />
    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.solid.bankrecipe.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/navigation_myPage"
        android:name="com.solid.bankrecipe.ui.myPage.MyPageFragment"
        android:label="@string/title_myPage"
        tools:layout="@layout/fragment_my_page" />
</navigation>